[package]
name = "rvfm_main"
version = "0.1.0"
authors = ["Liam Taylor <witaylo@microsoft.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rv_vsys = { path = "rv_vsys", features=[] }
byteorder = "1"
simple_endian = "0.2.0"
bytemuck = "1.5"
image = "0.23"
winit = "0.22"
shaderc = "0.7"
cgmath = "0.17"
env_logger = "0.7"
log = "0.4"
wgpu = "0.6"
futures = "0.3"
parking_lot = "0.11"
atomic-counter = "1"
once_cell = "1.6"
cpal = "0.13.1"
atom = "0.4.0"
num-traits = "0.2"
"json" = "*"
"regex" = "*"
